overflow fixed

--- a/css/greet.css
+++ b/css/greet.css
@@ -26,8 +26,8 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 10px; 
-  margin-left: 20px; 
-  padding: 10px; 
+  margin-left: 30px; 
+  padding-left: 20px; 
 }
 
 .col-2 {
